# Priority-Ordered-Update

./: README.md  fwritecvt.m  push.sh
cpp_full/: CMakeLists.txt  codedescriptor.dmr  main.cpp  main.h  maskedClassification.cpp  maskedClassification.h  ordering.cpp  rtwtypes.h
data-gen/: gen.m
heap/: CMakeLists.txt  main.cpp  minHeap.cpp  minHeap.h
pri_cpp/: CMakeLists.txt  constants.cpp  main.cpp  main.h  minOrMax.h  ordering.cpp  ordering.h
pri_cpp/examples/: main.cpp
pri_cpp/html/: report.mldatx
pri_cpp/interface/: _coder_classification_api.h  _coder_classification_mex.h
pri_cpp_FAST/: CMakeLists.txt  main.h  maxHeap.cpp  ordering.cpp  ordering.h
pri_cpp_batch/: CMakeLists.txt  classification_data.cpp  main.cpp  main.h  maxHeap.h  minHeap.h  minOrMax.cpp  minOrMax.h  ordering.cpp  ordering.h
pri_cpp_heap/: CMakeLists.txt  CoderTimeAPI.cpp  classification.cpp  classification_data.cpp  classification_data.h  classification_initialize.cpp  classification_rtw.mk  classification_terminate.cpp  classification_terminate.h  classification_types.h  main.cpp  main.h  minHeap.cpp  ordering.cpp  ordering.h  sigmoid.h  sortedInsertion.h  toc.cpp
pri_cpp_rand/: classification.h  classification_data.h  main.h  ordering.cpp  ordering.h  timeKeeper.cpp
priority_efast/: GeneratingHanddrawnDigitsUsingAVariationalAutoencoderVAEExample.mlx  classification.m  classification.prj  efast.m  fast.asv  fast.m  lib_sigmoid.prj  ordering.prj  pri3.m  sigmoid.m  sigmoid.prj  test.m
priority_efast/codegen/lib/classification/: defines.txt  ordering.cpp  tic.cpp
priority_efast/codegen/lib/classification/interface/: _coder_classification_api.h
priority_efast/codegen/lib/ordering/: CoderTimeAPI.cpp  defines.txt  ordering.cpp  ordering_initialize.h  ordering_terminate.cpp  ordering_types.h  rtwtypes.h  tic.cpp  timeKeeper.cpp  toc.cpp
priority_efast/codegen/lib/ordering/interface/: _coder_ordering_api.cpp
priority_m2c/: nn.m  pri3.m
priority_v1/: nn.m  pri.m  pri3.m  test.m
priority_v1/training_data/: n-300.mat
priority_v1_m2c/: n-150.mat  n-200.mat  n-25.mat  n-250.mat  n-350.mat  n-400.mat  n-50.mat  n-75.mat  ordering.m  pri3.m
priority_v1_m2c/codegen/lib/classification/: classification.cpp  classification.h  codedescriptor.dmr
priority_v1_m2c/codegen/lib/classification/examples/: main.cpp
priority_v1_m2c/codegen/lib/classification/html/: report.mldatx
priority_v1_m2c/codegen/lib/classification/interface/: _coder_classification_api.cpp
priority_v1_m2c/codegen/lib/ordering/: codedescriptor.dmr  ordering_data.h
priority_v1_m2c/codegen/lib/ordering/html/: report.mldatx
priority_v1_m2c/codegen/lib/ordering/interface/: _coder_ordering_mex.cpp
priority_v1_ncurve/: Book1.xlsx  fmincg.prj  plotcurve.m  pri2.m  pri3.m  r-0.2.xlsx
priority_v1_ncurve/excel/: Book1.xlsx
priority_v1_ncurve/excel/c/: r-0.04.xlsx  r-0.2.xlsx  r-0.5.xlsx  r-0.8.xlsx  r-1.xlsx
priority_v1_ncurve/excel/mat/: r-0.04.xlsx  r-0.5.xlsx  r-0.8.xlsx
priority_windowed_sorting/: n-100.mat  pri3.m  sigmoidGradient.m
priority_windowed_sorting/codegen/lib/classification/: classification_initialize.h  minOrMax.cpp  ordering.h  sigmoid.cpp
priority_windowed_sorting/codegen/lib/ordering/: ordering_data.cpp  ordering_initialize.cpp  ordering_rtw.mk  ordering_terminate.h  sortedInsertion.cpp
priority_windowed_sorting/codegen/mex/classification_mex/: compile_commands.json
temp/: CMakeLists.txt  ordering.cpp
test_cpp/: CMakeLists.txt  main.cpp
three layers NN/: nn.m  test.m
three layers NN trainer/: nn.m  oneVersusAll.m
three layers NN trainer/ex3/: ex3.m  oneVersusAll.m  oneVsAll.m  predict.m
three layers NN/ex3/: lrCostFunction.m  predictOneVsAll.m
three layers NN/ex4/: nn.m  nnCostFunction.m  predict.m
train_py/: cvt.asv  cvt.m  gen.m  main.py
train_py/old/: n-25-1.bin.npy  n-25-2.bin.npy
(+8 files in other folders)
